<resources>
    <string name="app_name">Individual Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_word" />
    <string name="add_new_words">Add New Word</string>
    <string name="title">Title</string>
    <string name="meaning">Meaning</string>
    <string name="synonyms">Synonyms</string>
    <string name="details">Details</string>
    <string name="add">Add</string>
    <string name="word_details">Word Details</string>
    <string name="done">Done</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_word">Update Word</string>
</resources>